# partially-strided-codelet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
codelet_demo/: GenericKernels.h  RunTests.cpp  RunTests.h  TestPSC.cpp  TestPSC.h
demo/: BLAS.cpp  CMakeLists.txt  FastHash.h  FusionDemo.cpp  FusionDemo.h  PAPIWrapper.h  Profiler.h  SPMM_demo.cpp  SPMM_demo_utils.h  SPMM_dl_demo.cpp  SPMM_dl_demo_utils.h  SPMV_CVR.cpp  SPMV_demo.cpp  SPMV_demo_utils.h  SPSPMM_demo.cpp  SPSPMM_demo_utils.h  SPTRSV_demo.cpp  SPTRSV_demo_utils.h  SPTRSV_supernodal_sympiler.h  SerialSpMVExecutor.cpp  SerialSpMVExecutor.h  SpSpCSR.h
demo/smp/: exceptions.h  io.h  smp_def.h  utils.h
include/: Analyzer.h  DDT.h  DDTCodelets.h  DDTDef.h  DDTUtils.h  Executor.h  GenericCodelets.h  GenericCodeletsSpTRSV.h  Inspector.h  MatrixUtils.h  ParseMatrixMarket.h  PatternMatching.h  SpMVGenericCode.h  def.h
lib/: lbc_csc_dag.cpp  lbc_csc_dag.h
scripts/: run_exp.sh  sptrsv_niagara.sh
scripts/mining/: main.py  psc_codelet.py
scripts/pldi/: plot_spmm_final.py  plot_spmv_final.py  run_exp.sh  run_niagara.sh
scripts/ssgetpy/: download_suite_sparse_matrices.py
src/: Analyzer.cpp  DDT.cpp  Executor.cpp  GenericCodeletsFSC.cpp  GenericCodeletsPSCT1.cpp  GenericCodeletsPSCT1.h  GenericCodeletsPSCT2.cpp  GenericCodeletsPSCT3.cpp  Input.cpp  Inspector.cpp  Inspector.h  ParseMatrixMarket.cpp  PatternMatching.cpp  SpMVGenericCode.cpp  SpMVGenericCode.h  output.cpp
src/code_gen/: GenerateCppSource.cpp
src/spmm_codelets/: SpMMGenericCode.cpp
src/spmv_codelets/: GenericCodeletsFSC.cpp  GenericCodeletsPSCT1.cpp  GenericCodeletsPSCT2.cpp  SpMVGenericCode.cpp
src/sptrsv_codelets/: GenericCodeletsSpTRSV.cpp
src/trace_gen/: PolyModel.cpp  PolyModel.h  SpMVModel.cpp  SpTRSVModel.cpp  SpTRSVModel.h  Trace.cpp  Trace.h
tsp-tools/: TSP-Simulation.cpp
